--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -27,3 +27,10 @@
 .u-margin-top-huge{
     margin-top: 10rem;
 }
+
+.u-center-col{
+    text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
