--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,19 +8,15 @@
 @import "base/utilities";
 
 @import "components/button";
-@import "components/separator";
+@import "components/circle";
 @import "components/cta";
-
-@import "components/composition";
-@import "components/feature-box";
-@import "components/card";
-@import "components/story";
-@import "components/bg-video";
-@import "components/form";
-@import "components/popup";
+@import "components/separator";
 
 
 @import "pages/home";
+@import "pages/about";
+@import "pages/events";
+@import "pages/menu";
 
 
 @import "layout/header";
