--- a/css/style.css
+++ b/css/style.css
@@ -128,10 +128,19 @@ body {
 
 .paragraph {
   font-size: 1.6rem;
-  line-height: 1.6rem;
-  font-weight: 100; }
+  line-height: 2.2rem;
+  font-weight: 300;
+  color: #000; }
   .paragraph:not(:last-child) {
     margin-bottom: 3rem; }
+  .paragraph--white {
+    color: #fff; }
+
+.title-bold {
+  font-size: 1.6rem;
+  line-height: 2.2rem;
+  color: #000;
+  margin-bottom: 5px; }
 
 .u-center-text {
   text-align: center; }
@@ -159,6 +168,12 @@ body {
 
 .u-margin-top-huge {
   margin-top: 10rem; }
+
+.u-center-col {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column; }
 
 .btn, .btn:link, .btn:visited {
   margin: 0 10px;
@@ -253,12 +268,31 @@ body {
   box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.15);
   transform: translateY(0); }
 
-.separator {
-  height: 50vh; }
-  .separator--home {
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url(../img/cinnapan-1.jpg);
-    background-position: center;
-    background-size: cover; }
+.circle-container {
+  display: inline-flex;
+  width: 100%;
+  justify-content: center; }
+
+.circle {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 3px dashed #000;
+  background-color: #fff;
+  margin: 0 15px;
+  text-align: center;
+  padding-top: 10px; }
+  .circle--photo {
+    border: none; }
+    .circle--photo-1 {
+      background-image: url(../img/cinnapan-1.jpg);
+      background-size: cover; }
+  .circle--small {
+    position: relative;
+    top: -50px;
+    width: 80px;
+    height: 80px;
+    margin: 0 40px; }
 
 .cta {
   height: 20vh;
@@ -275,451 +309,12 @@ body {
       text-transform: uppercase;
       letter-spacing: 2px; }
 
-.composition {
-  position: relative;
-  margin-left: 5rem; }
-  @media only screen and (max-width: 75em) {
-    .composition {
-      margin-top: 15rem;
-      margin-left: 0rem; } }
-  .composition__photo {
-    width: 35%;
-    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
-    border-radius: 2px;
-    position: absolute;
-    z-index: 10;
-    transition: all .2s;
-    outline-offset: 2rem; }
-    @media only screen and (max-width: 56.25em) {
-      .composition__photo {
-        float: left;
-        position: relative;
-        width: 33.333%;
-        box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2); } }
-    .composition__photo--p1 {
-      left: 0;
-      top: -2rem; }
-      @media only screen and (max-width: 56.25em) {
-        .composition__photo--p1 {
-          top: 0;
-          transform: scale(1.2); } }
-    .composition__photo--p2 {
-      right: 15rem;
-      top: 2rem; }
-      @media only screen and (max-width: 56.25em) {
-        .composition__photo--p2 {
-          top: -1rem;
-          right: 0;
-          transform: scale(1.3);
-          z-index: 100; } }
-    .composition__photo--p3 {
-      left: 20%;
-      top: 10rem; }
-      @media only screen and (max-width: 56.25em) {
-        .composition__photo--p3 {
-          top: 1rem;
-          left: 0;
-          transform: scale(1.1); } }
-    .composition__photo:hover {
-      outline: 1.5rem solid #F8C403;
-      transform: scale(1.05) translateY(-5px);
-      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
-      z-index: 20; }
-  .composition:hover .composition__photo:not(:hover) {
-    transform: scale(0.95); }
-
-.feature-box {
-  background-color: rgba(255, 255, 255, 0.8);
-  font-size: 1.5rem;
-  padding: 2.5rem;
-  text-align: center;
-  border-radius: 3px;
-  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
-  transition: transform .3s;
-  margin: 0 10px; }
-  @media only screen and (max-width: 75em) {
-    .feature-box {
-      margin: 2rem auto; } }
-  .feature-box:hover {
-    transform: translateY(-1.2rem) scale(1.03); }
-
-.fa-bullseye,
-.fa-adjust,
-.fa-circle-notch,
-.fa-dot-circle {
-  font-size: 6rem !important;
-  margin-bottom: 2rem;
-  background-image: linear-gradient(to right, #FDDC66, #f8b703);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent; }
-
-.card {
-  perspective: 150rem;
-  -moz-perspective: 150rem;
-  position: relative;
-  margin: 10px;
-  height: 50rem; }
-  .card__side {
-    height: 50rem;
-    transition: all .8s ease;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    border-radius: 3px;
-    overflow: hidden;
-    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
-    .card__side--front {
-      background-color: #fff !important; }
-    .card__side--back {
-      transform: rotateY(180deg); }
-      .card__side--back-1 {
-        background-image: linear-gradient(to right bottom, #003399, #00143B); }
-      .card__side--back-2 {
-        background-image: linear-gradient(to right bottom, #FDDC66, #f8b703); }
-      .card__side--back-3 {
-        background-image: linear-gradient(to right bottom, #4aaa24, #0e8034); }
-  .card:hover .card__side--front {
-    transform: rotateY(-180deg); }
-  .card:hover .card__side--back {
-    transform: rotateY(0); }
-  .card__picture {
-    background-size: cover;
-    height: 25rem;
-    background-position: left center;
-    background-blend-mode: screen;
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%); }
-    .card__picture--1 {
-      background-image: linear-gradient(to right bottom, #003399, #00143B), url(../img/nat-1.jpg); }
-    .card__picture--2 {
-      background-image: linear-gradient(to right bottom, #FDDC66, #f8b703), url(../img/nat-1.jpg); }
-    .card__picture--3 {
-      background-image: linear-gradient(to right bottom, #4aaa24, #0e8034), url(../img/nat-1.jpg); }
-  .card__heading {
-    font-size: 2.8rem;
-    font-weight: 300;
-    text-transform: uppercase;
-    text-align: right;
-    color: #fff;
-    position: absolute;
-    top: 12rem;
-    right: 2rem;
-    width: 75%; }
-  .card__heading-span {
-    padding: 1rem 2.5rem;
-    -webkit-box-decoration-break: clone;
-    box-decoration-break: clone; }
-    .card__heading-span--1 {
-      background-image: linear-gradient(to right bottom, rgba(0, 51, 153, 0.85), rgba(0, 20, 59, 0.85)), url(../img/nat-1.jpg); }
-    .card__heading-span--2 {
-      background-image: linear-gradient(to right bottom, rgba(253, 220, 102, 0.85), rgba(248, 183, 3, 0.85)), url(../img/nat-1.jpg); }
-    .card__heading-span--3 {
-      background-image: linear-gradient(to right bottom, rgba(74, 170, 36, 0.85), rgba(14, 128, 52, 0.85)), url(../img/nat-1.jpg); }
-  .card__details ul {
-    list-style: none;
-    width: 80%;
-    margin: 0 auto; }
-    .card__details ul li {
-      text-align: center;
-      font-size: 1.5rem;
-      padding: 1rem; }
-      .card__details ul li:not(:last-child) {
-        border-bottom: 1px solid #eee; }
-  .card__cta {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); }
-  .card__price-box {
-    text-align: center;
-    margin-bottom: 8rem;
-    color: #fff; }
-  .card__price-only {
-    font-size: 1.4rem;
-    text-transform: uppercase; }
-  .card__price-value {
-    font-size: 6rem;
-    font-weight: 100; }
-  @media only screen and (max-width: 56.25em), only screen and (hover: none) {
-    .card {
-      height: auto;
-      border-radius: 3px;
-      background-color: #fff;
-      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
-      .card__side {
-        height: auto;
-        position: relative;
-        box-shadow: none; }
-        .card__side--back {
-          transform: rotateY(0);
-          -webkit-clip-path: polygon(0 20%, 100% 0, 100% 100%, 0 100%);
-          clip-path: polygon(0 20%, 100% 0, 100% 100%, 0 100%); }
-      .card:hover .card__side--front {
-        transform: rotateY(0); }
-      .card__cta {
-        position: relative;
-        top: 0%;
-        left: 0%;
-        transform: translate(0%);
-        padding: 7rem 4rem 4rem 4rem;
-        text-align: center; }
-      .card__price-box {
-        margin-bottom: 3rem; }
-      .card__price-value {
-        font-size: 6rem; } }
-
-.story {
-  width: 75%;
-  margin: 2rem auto;
-  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.6);
-  background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 3px;
-  padding: 4rem;
-  padding-left: 9rem;
-  font-size: 1.6rem;
-  transform: skewX(-12deg); }
-  @media only screen and (max-width: 56.25em) {
-    .story {
-      width: 90%;
-      padding: 4rem;
-      padding-left: 7rem; } }
-  @media only screen and (max-width: 37.5em) {
-    .story {
-      transform: skewX(0); } }
-  .story > * {
-    transform: skewX(12deg); }
-  .story__shape {
-    position: relative;
-    width: 15rem;
-    height: 15rem;
-    float: left;
-    border-radius: 50%;
-    transform: translateX(-3rem) skewX(12deg);
-    overflow: hidden; }
-    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
-      .story__shape {
-        -webkit-shape-outside: circle(50% at 50% 50%);
-        shape-outside: circle(50% at 50% 50%);
-        -webkit-clip-path: circle(50% at 50% 50%);
-        clip-path: circle(50% at 50% 50%);
-        border-radius: none; } }
-    @media only screen and (max-width: 37.5em) {
-      .story__shape {
-        transform: translateX(-3rem) skewX(0); } }
-  .story__img {
-    width: 100%;
-    backface-visibility: hidden;
-    transform: scale(1.2);
-    transition: all 0.5s; }
-  .story__text {
-    transform: skewX(12deg); }
-    @media only screen and (max-width: 37.5em) {
-      .story__text {
-        transform: skewX(0); } }
-  .story__caption {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, 20%);
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 1.7rem;
-    line-height: 1.8rem;
-    text-align: center;
-    opacity: 0;
-    transition: all .5s;
-    backface-visibility: hidden; }
-  .story:hover .story__caption {
-    opacity: 1;
-    transform: translate(-50%, -50%); }
-  .story:hover .story__img {
-    transform: scale(1);
-    filter: blur(3px) brightness(80%); }
-
-.bg-video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  z-index: -1;
-  opacity: 0.1;
-  overflow: hidden; }
-  .bg-video__content {
-    height: 100%;
-    width: 100%;
-    object-fit: cover; }
-
-.form__group:not(:last-child) {
-  margin-bottom: 2rem; }
-
-.form__input {
-  font-size: 1.5rem;
-  padding: 1.5rem 2rem;
-  border-radius: 2px;
-  background-color: rgba(255, 255, 255, 0.5);
-  border: none;
-  font-family: inherit;
-  border-bottom: 3px solid transparent;
-  width: 90%;
-  display: block;
-  color: inherit;
-  transition: all .3s; }
-  @media only screen and (max-width: 56.25em) {
-    .form__input {
-      width: 100%;
-      margin-bottom: 2rem; } }
-  .form__input:focus {
-    outline: none;
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
-    border-bottom: 3px solid #F8C403; }
-  .form__input:focus:invalid {
-    border-bottom: 3px solid #00143B; }
-  .form__input::-webkit-input-placeholder {
-    color: #777; }
-
-.form__label {
-  font-size: 1.3rem;
-  font-weight: 700;
-  margin-left: 2rem;
-  margin-top: .7rem;
-  display: block;
-  transition: all .3s; }
-
-.form__input:placeholder-shown + .form__label {
-  opacity: 0;
-  visibility: hidden;
-  transform: translateY(-4rem); }
-
-.form__radio-group {
-  width: 49%;
-  display: inline-block; }
-  @media only screen and (max-width: 56.25em) {
-    .form__radio-group {
-      width: 100%;
-      margin-bottom: 2rem; } }
-
-.form__radio-input {
-  display: none; }
-
-.form__radio-label {
-  font-size: 1.6rem;
-  cursor: pointer;
-  position: relative;
-  padding-left: 4.5rem; }
-
-.form__radio-button {
-  height: 3rem;
-  width: 3rem;
-  border: 5px solid #F8C403;
-  border-radius: 50%;
-  display: inline-block;
-  position: absolute;
-  left: 0;
-  top: -.4rem; }
-  .form__radio-button::after {
-    height: 1.3rem;
-    width: 1.3rem;
-    display: block;
-    content: "";
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #F8C403;
-    opacity: 0;
-    transition: opacity .2s; }
-
-.form__radio-input:checked + .form__radio-label .form__radio-button::after {
-  opacity: 1; }
-
-.popup {
-  height: 100vh;
-  width: 100vw;
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 9990;
-  background-color: rgba(0, 0, 0, 0.8);
-  opacity: 0;
-  visibility: hidden;
-  transition: all .3s; }
-  @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
-    .popup {
-      -webkit-backdrop-filter: blur(10px);
-      backdrop-filter: blur(10px);
-      background-color: rgba(0, 0, 0, 0.3); } }
-  .popup:target {
-    opacity: 1;
-    visibility: visible; }
-  .popup__content {
-    position: relative;
-    width: 65%;
-    background-color: #fff;
-    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
-    border-radius: 3px;
-    display: table;
-    overflow: hidden;
-    opacity: 0;
-    transform: scale(0.2);
-    transition: all .5s .2s; }
-  .popup:target .popup__content {
-    opacity: 1;
-    transform: scale(1); }
-  .popup__left {
-    width: 33.3333%;
-    display: table-cell; }
-  .popup__right {
-    width: 66.6666%;
-    display: table-cell;
-    vertical-align: middle;
-    padding: 3rem 5rem; }
-  .popup__img {
-    display: block;
-    width: 100%;
-    max-height: 250px; }
-  .popup__text {
-    font-size: 1.4rem;
-    margin-bottom: 4rem;
-    -moz-column-count: 2;
-    -moz-column-gap: 4rem;
-    -moz-column-rule: 1px solid #c7c7c7;
-    -webkit-column-count: 2;
-    -webkit-column-gap: 4rem;
-    -webkit-column-rule: 1px solid #c7c7c7;
-    column-count: 2;
-    column-gap: 4rem;
-    column-rule: 1px solid #c7c7c7;
-    -moz-hyphens: auto;
-    -ms-hyphens: auto;
-    -webkit-hyphens: auto;
-    hyphens: auto;
-    -moz-word-wrap: break-word;
-    -moz-overflow-wrap: break-word;
-    -webkit-word-wrap: break-word;
-    -webkit-overflow-wrap: break-word;
-    word-wrap: break-word;
-    overflow-wrap: break-word; }
-  .popup__close:link, .popup__close:visited {
-    color: #777;
-    position: absolute;
-    top: 2.5rem;
-    right: 2.5rem;
-    font-size: 3rem;
-    text-decoration: none;
-    display: inline-block;
-    transition: all .2s;
-    line-height: 1rem; }
-  .popup__close:hover {
-    color: #F8C403; }
+.separator {
+  height: 50vh; }
+  .separator--home {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url(../img/cinnapan-1.jpg);
+    background-position: center;
+    background-size: cover; }
 
 .section-intro {
   background-image: radial-gradient(#fddc66, #f8b703);
@@ -727,21 +322,6 @@ body {
   @media only screen and (max-width: 56.25em) {
     .section-intro {
       padding: 20rem 0; } }
-
-.circle-container {
-  display: inline-flex;
-  width: 100%;
-  justify-content: center; }
-
-.circle {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  border: 3px dashed #000;
-  background-color: #fff;
-  margin: 0 15px;
-  text-align: center;
-  padding-top: 10px; }
 
 .btn-wrapper {
   text-align: center;
@@ -805,11 +385,70 @@ body {
   padding: 5px 10px;
   font-weight: 400; }
 
+.section-info {
+  background-color: #FDDC66;
+  padding: 60px 0; }
+  .section-info__wrapper {
+    width: 80%;
+    margin: 0 auto; }
+  .section-info__img-bw {
+    width: 300px;
+    height: 300px;
+    margin: 0 30px; }
+
+.section-process {
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url(../img/bg-stone.jpg);
+  background-position: right;
+  background-size: 120%;
+  padding: 60px 0;
+  width: 100%; }
+  .section-process__wrapper {
+    width: 80%;
+    margin: 20px auto; }
+  .section-process__text {
+    margin: 0 5px;
+    margin-top: -20px; }
+
+.section-events {
+  padding: 60px 0;
+  width: 70%;
+  margin: 0 auto; }
+
+.cta__secondary {
+  margin: 20px auto;
+  text-align: center; }
+
+.events-icons {
+  margin-top: 50px; }
+
+.square {
+  width: 100px;
+  height: 100px;
+  border-radius: 5px;
+  background-color: #F8C403;
+  margin-bottom: 50px; }
+
+.img__products {
+  width: 100%; }
+
+.products__text {
+  background-color: #000;
+  padding: 20px;
+  text-align: center; }
+
+.card {
+  margin: 10px; }
+
 .header {
   height: 100vh;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), black), url(../img/cinnapan-header.jpg);
   background-position: right;
   background-size: 120%; }
+  .header--about {
+    height: 50vh;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), black), url(../img/cinnapan-header.jpg);
+    background-position: right;
+    background-size: 120%; }
   .header__logo-box {
     top: 2rem;
     left: 4rem;
@@ -823,6 +462,13 @@ body {
     left: 50%;
     display: inline-block;
     width: 450px; }
+  .header__text {
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
   .header__img {
     text-align: right;
     width: 100%; }
