--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,35 +1,51 @@
-.header{
-    height: 100vh;
+.header {
+  height: 100vh;
+  background-image: linear-gradient(to right, rgba(black, 0.2), rgba(black, 1)),
+    url(../img/cinnapan-header.jpg);
+  background-position: right;
+  background-size: 120%;
+
+  &--about {
+    height: 50vh;
     background-image: linear-gradient(
         to right,
-        rgba(black, 0.2), 
-        rgba(black, 1)),
-        url(../img/cinnapan-header.jpg);
-        background-position: right;
-        background-size: 120%;
+        rgba(black, 0.2),
+        rgba(black, 1)
+      ),
+      url(../img/cinnapan-header.jpg);
+    background-position: right;
+    background-size: 120%;
+  }
 
+  &__logo-box {
+    top: 2rem;
+    left: 4rem;
+    position: absolute;
+  }
 
-    &__logo-box{
-        top: 2rem;
-        left: 4rem;
-        position: absolute;
-    }
+  &__logo {
+    height: 8rem;
+  }
 
-    &__logo{
-        height: 8rem;
-    }
+  &__text-box {
+    position: absolute;
+    text-align: center;
+    top: 30%;
+    left: 50%;
+    display: inline-block;
+    width: 450px;
+  }
+  &__text {
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-    &__text-box{
-        position: absolute;
-        text-align: center;
-        top: 30%;
-        left: 50%;
-        display: inline-block;
-        width: 450px;
-        }
-
-    &__img{
-        text-align: right;
-        width: 100%;
-    }
+  &__img {
+    text-align: right;
+    width: 100%;
+  }
 }
