--- a/gatsby/src/layout/base/_typography.scss
+++ b/gatsby/src/layout/base/_typography.scss
@@ -96,3 +96,11 @@ body {
   color: $color-black;
   margin-bottom: 5px;
 }
+
+.title--menu{
+  color: $color-white;
+  font-size: 1.5rem;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
