--- a/gatsby/src/layout/components/_button.scss
+++ b/gatsby/src/layout/components/_button.scss
@@ -15,6 +15,7 @@
         font-size: $default-font-size;
         font-weight: 400;
         text-transform: capitalize;
+        border: none;
 
         cursor: pointer;
     }
