--- a/gatsby/src/layout/main.scss
+++ b/gatsby/src/layout/main.scss
@@ -11,6 +11,7 @@
 @import "components/circle";
 @import "components/cta";
 @import "components/separator";
+@import "components/icons";
 
 
 @import "pages/home";
