--- a/gatsby/src/layout/pages/_home.scss
+++ b/gatsby/src/layout/pages/_home.scss
@@ -33,6 +33,7 @@
   &-wrapper{
     width: 100%;
     margin: 0 auto;
+    display: flex;
   }
 }
 
@@ -74,18 +75,7 @@
 
   }
 }
-.fa-facebook-f,
-.fa-instagram{
-    font-size: 3rem !important;
-    margin: auto 15px;
-    color: white;
-    text-align: center;
-    width: 60px;
-    height: 60px;
-    padding: 15px;
-    border-radius: 50%;
-    background-color: $color-black;
-}
+
 
 .hashtag{
   margin: 10px auto;
