--- a/src/layout/main.scss
+++ b/src/layout/main.scss
@@ -12,12 +12,14 @@
 @import "components/cta";
 @import "components/separator";
 @import "components/icons";
+@import "components/form";
 
 
 @import "pages/home";
 @import "pages/about";
 @import "pages/events";
 @import "pages/menu";
+@import "pages/contact";
 
 
 @import "layout/header";
