--- a/src/layout/base/_typography.scss
+++ b/src/layout/base/_typography.scss
@@ -34,8 +34,8 @@ body {
   animation-timing-function: ease-out;
 
   @include respond(phone) {
-    letter-spacing: 1rem;
-    font-size: 5rem;
+    font-size: 4rem;
+    line-height: 4rem;
   }
   
   &--white {
@@ -63,7 +63,7 @@ body {
 
   @include respond(phone) {
     letter-spacing: 0.5rem;
-    font-size: 2rem;
+    font-size: 4rem;
   }
 
   &--white {
