--- a/src/layout/components/_circle.scss
+++ b/src/layout/components/_circle.scss
@@ -2,6 +2,11 @@
   display: inline-flex;
   width: 100%;
   justify-content: center;
+
+  @include respond(phone){
+    display: inline-block;
+
+  }
 }
 
 .circle {
@@ -13,6 +18,10 @@
   margin: 0 15px;
   text-align: center;
   padding: 30px;
+  
+  @include respond(phone){
+    margin: 5px auto;
+  }
 
   &--photo{
     border: none;
