init conferencia project

--- a/src/layout/abstracts/_variables.scss
+++ b/src/layout/abstracts/_variables.scss
@@ -1,6 +1,6 @@
-$color-primary:#F8C403 ;
-$color-primary-light: #FDDC66;
-$color-primary-dark:#f8b703;
+$color-primary:rgb(160, 23, 18) ;
+$color-primary-light: rgb(219, 80, 80);
+$color-primary-dark:#550808;
 
 $color-secondary-light: #003399 ;
 $color-secondary-dark: #00143B;
