--- a/src/layout/components/_button.scss
+++ b/src/layout/components/_button.scss
@@ -7,7 +7,7 @@
         min-width: 150px;
         text-align: center;
         text-decoration: none;
-        padding: 1rem 2rem;
+        padding: 1rem 3rem;
         display: inline-block;
         border-radius: 10rem;
         transition: all .2s;
@@ -16,6 +16,8 @@
         font-weight: 400;
         text-transform: capitalize;
         border: none;
+        font-weight: bold;
+    text-transform: uppercase;
 
         cursor: pointer;
     }
@@ -37,7 +39,7 @@
     }
     &--white{
         background-color: $color-white;
-        color: $color-black;
+        color: $color-primary;
         
         &::after{
             background-color: $color-primary;
@@ -52,15 +54,15 @@
             background-color: $color-primary;
         }
     }
-    &--yellow{
+    &--primary{
         background-color: $color-primary;
-        color: $color-black;
+        color: $color-white;
         
         &::after{
             background-color: $color-white;
         }
     }
-    &--blue{
+    &--secondary{
         background-color: $color-secondary-light;
         color: $color-white;
         
