--- a/src/layout/components/_separator.scss
+++ b/src/layout/components/_separator.scss
@@ -7,7 +7,7 @@
         rgba(black, 0.2),
         rgba(black, 0.3)
       ),
-      url(../images/cinnapan-1.jpg);
+      url(../images/direito.jpg);
     background-position: center;
     background-size: cover;
   }
