--- a/src/layout/layout/_header.scss
+++ b/src/layout/layout/_header.scss
@@ -1,10 +1,21 @@
 .header {
   height: 100vh;
   background-image: linear-gradient(to right, rgba(black, 0.2), rgba(black, 1)),
-    url(../images/cinnapan-header.jpg);
+    url(../images/imgBckg.jpg);
   background-position: right;
   background-size: cover;
-  
+
+  &__container {
+    max-width: 750px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding-top: 90px;
+  }
 
   &--about {
     height: 50vh;
@@ -13,9 +24,18 @@
         rgba(black, 0.2),
         rgba(black, 1)
       ),
-      url(../images/cinnapan-header.jpg);
+      url(../images/imgBckg.jpg);
     background-position: center;
     background-size: cover;
+  }
+
+  &__text{
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    color: $color-white;
   }
 
   &__logo-box {
@@ -30,35 +50,20 @@
   }
 
   &__text-box {
-    position: absolute;
+    position: relative;
     text-align: center;
-    top: 30%;
-    left: 50%;
-    display: inline-block;
-    width: 30%;
+    color: $color-white;
 
-    @include respond(tab-port){
-      width: 50%;
-      top: 30%;
-      left: 30%;
-  }
-    @include respond(phone){
-      width: 80%;
-      top: 30%;
-      left: 10%;
-  }
-  }
-  &__text {
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+    p {
+      margin-bottom: 50px;
+    }
 
-  &__img {
-    text-align: right;
-    width: 100%;
+    em:after {
+      content: "";
+      border-bottom: 1px solid #fff;
+      width: 100%;
+      display: block;
+      margin: 30px auto;
+    }
   }
 }
