--- a/src/layout/pages/_about.scss
+++ b/src/layout/pages/_about.scss
@@ -1,5 +1,4 @@
 .section-info {
-  background-color: $color-primary-light;
   padding: 60px 0;
 
   &__wrapper {
@@ -21,25 +20,21 @@
 }
 
 .section-process {
-  background-image: linear-gradient(
-      to right,
-      rgba(rgb(255, 255, 255), 0.5),
-      rgba(rgb(255, 255, 255), 0.5)
-    ),
-    url(../images/bg-stone.jpg);
+  background-image:
+    url(../images/imgBckg.jpg);
   background-position: right;
   background-size: 120%;
 
-  padding: 60px 0;
+  padding: 120px 0;
   width: 100%;
 
   &__wrapper {
     width: 80%;
-    margin: 20px auto;
+    margin: 50px auto;
   }
 
   &__text {
     margin: 0 5px;
-    margin-top: -20px;
+    margin-top: 10px;
   }
 }
