--- a/src/layout/layout/_header.scss
+++ b/src/layout/layout/_header.scss
@@ -1,7 +1,7 @@
 .header {
   height: 100vh;
-  background-image: linear-gradient(to right, rgba(black, 0.2), rgba(black, 1)),
-    url(../images/imgBckg.jpg);
+  background-image: linear-gradient(to top left , rgba(rgb(0, 0, 0), 0.7), rgba(rgb(0, 0, 0), .9)),
+    url(../images/lisbon.jpg);
   background-position: right;
   background-size: cover;
 
