--- a/src/layout/pages/_about.scss
+++ b/src/layout/pages/_about.scss
@@ -20,10 +20,14 @@
 }
 
 .section-process {
-  background-image:
-    url(../images/imgBckg.jpg);
-  background-position: right;
-  background-size: 120%;
+  background-image: linear-gradient(
+    to top left,
+    rgba(black, 0.7),
+    rgba(black, 0.3)
+  ),
+  url(../images/imgBckg.jpg);
+background-position: center;
+background-size: cover;
 
   padding: 120px 0;
   width: 100%;
