--- a/src/layout/pages/_home.scss
+++ b/src/layout/pages/_home.scss
@@ -1,8 +1,9 @@
 .section-intro {
-  background-image: radial-gradient(
-    rgba($color-primary-light, 1),
-    rgba($color-primary-dark, 1)
-  );
+  // background-image: radial-gradient(
+  //   rgba($color-primary-light, 1),
+  //   rgba($color-primary-dark, 1)
+  // );
+  text-align: center;
   padding: 5rem 0;
 
   @include respond(tab-port) {
@@ -19,16 +20,9 @@
 
 .display {
   height: 100vh;
-  padding: 60px auto;
+  padding: 60px 0;
   text-align: center;
-  background-image: linear-gradient(
-      to right,
-      rgba(black, 0.6),
-      rgba(black, 0.6)
-    ),
-    url(../images/bg-stone-red.jpg);
-  background-position: center;
-  background-size: cover;
+  
 
   @include respond(phone){
     display: block;
@@ -52,8 +46,8 @@
 
 .display-img {
   height: 350px;
-  width: 28%;
-  margin: 0 10px 20px 10px;
+  width: 100%;
+  margin: 010px auto;
   @include respond(phone){
     width: 50%;
     margin: 10px auto;
@@ -61,46 +55,4 @@
   }
 }
 
-.testemonials {
-  background-image: linear-gradient(
-      to right,
-      rgba(black, 0.2),
-      rgba(black, 0.2)
-    ),
-    url(../images/cinnapan-3.jpeg);
-  background-position: center;
-  background-size: cover;
-  text-align: center;
-  padding: 60px 0;
 
-  &-wrapper {
-    max-width: 80%;
-    margin: 20px auto;
-  }
-  &-box {
-    margin-bottom: 20px;
-    background-color: rgba(black, 0.6);
-    color: $color-white;
-    padding: 20px;
-    margin: 0 10px 20px 10px;
-
-    &-name {
-      text-transform: uppercase;
-      letter-spacing: 3px;
-      margin-bottom: 10px;
-      font-weight: 400;
-    }
-
-  }
-}
-
-
-.hashtag{
-  margin: 10px auto;
-  display: inline-block;
-  color: $color-black;
-  border: 1px solid $color-black;
-  border-radius: 5px;
-  padding: 5px 10px;
-  font-weight: 400;
-}
